<resources>
    <string name="progress_download_geocaches" comment="Progress dialog message for downloading geocaches.">Downloading caches…</string>
    <string name="error_locus_not_found" comment="Error dialog message when Locus map is not installed.">Locus Map application was not found, but Geocaching4Locus requires it to work properly. Please install Locus Map.</string>
    <string name="error_location_disabled" comment="Error dialog message in search nearest screen when user has disabled location services like GPS.">Please allow Wireless or GPS location service in ‘Settings’.</string>
    <string name="progress_acquire_gps_location" comment="Progress dialog message when add-on is trying to retrieve location coordinates from GPS.">Acquiring location from GPS…</string>
    <string name="progress_acquire_network_location" comment="Progress dialog message when add-on is trying to retrieve location coordinates from Wi-Fi / mobile network.">Acquiring location from wireless network…</string>
    <string name="action_settings" comment="Title of ActionBar/Toolbar button in Search nearest activity which open add-on settings.">Settings</string>
    <string name="error_coordinates_format" comment="Error dialog message if coordinates enter in search nearest screen are not valid. This message can be shown after touch on Download FAB button.">Wrong coordinates format!</string>
    <string name="title_coordinates" comment="Title of coordinates section in Search nearest screen.">Coordinates</string>
    <string name="pref_distance" comment="Title of distance setting item in Filter section in add-on settings.">Distance</string>
    <string name="pref_distance_summary_km" comment="Summary of distance setting item in Filter section in add-on settings. Used when imperial units setting is not checked.">Distance in km</string>
    <string name="pref_distance_summary_miles" comment="Summary of distance setting item in Filter section in add-on settings. Used when imperial units setting is checked.">Distance in miles</string>
    <string name="pref_imperial_units" comment="Title of imperial units setting item in Advanced section in add-on settings. This change if add-on will use kilometers or miles.">Imperial units</string>
    <string name="pref_imperial_units_summary" comment="Summary of imperial units setting item in Advanced section in add-on settings. This change if add-on will use kilometers or miles.">Use miles instead of kilometers</string>
    <string name="error_no_account" comment="Error dialog message when user is not signed in / logged in.">You are not signed in. Please sign in first in account settings.</string>
    <string name="button_ok" comment="Dialog button for OK action.">OK</string>
    <string name="error_old_locus_map" comment="Error dialog message when installed Locus Map version is too old. The '%s' is replaced with minimal required Locus Map version (eg. '3.2.0']">Your installed version of Locus Map is too old. Geocaching4Locus require version %s or greater to work properly.</string>
    <string name="button_cancel" comment="Dialog button for cancel action.">Cancel</string>
    <string name="pref_show_found" comment="Title of show found geocaches in Filter category in add-on settings.">Show found</string>
    <string name="pref_show_found_summary" comment="Summary of show found geocaches in Filter category in add-on settings.">Show found caches</string>
    <string name="pref_show_own" comment="Title of show own hidden (hidden by you) geocaches in Filter category in add-on settings.">Show own hidden</string>
    <string name="pref_show_own_summary" comment="Summary of show own hidden (hidden by you) geocaches in Filter category in add-on settings.">Show own caches (hidden by you)</string>
    <string name="menu_select_all" comment="ActionBar/Toolbar action button title for selecting all checkable items. Placed in geocache type and container size filter.">Select all</string>
    <string name="pref_logs_count" comment="Title of count of logs to be downloaded with geocachce choose setting in Downloading section in add-on settings.">Count of logs</string>
    <string name="pref_logs_count_summary" comment="Summary of count of logs to be downloaded with geocachce choose setting in Downloading section in add-on settings.">Count of logs to download with cache</string>
    <string name="pref_show_disabled" comment="Title of show disabled geocaches in Filter category in add-on settings.">Show disabled</string>
    <string name="pref_show_disabled_summary" comment="Summary of show disabled geocaches in Filter category in add-on settings.">Show temporarily disabled caches</string>
    <string name="pref_version" comment="Title of Application version in About section in add-on settings.">Version</string>
    <string name="pref_website" comment="Title of setting item which open web browser with Geocaching4Locus website. This placed in About section in add-on settings.">Website, forum, etc.</string>
    <string name="pref_donate_paypal" comment="Title of setting item which show dialog to choose Paypal currency to use for donating. This placed in About section in add-on settings.">Donate via Paypal</string>
    <string name="pref_donate_paypal_summary" comment="Summary of setting item which show dialog to choose Paypal currency to use for donating. This placed in About section in add-on settings.">Support the future development…</string>
    <string name="pref_geocache_type" comment="">Cache types</string>
    <string name="pref_difficulty" comment="">Difficulty</string>
    <string name="pref_terrain" comment="">Terrain</string>
    <string name="pref_download_basic" comment="">Basic info only</string>
    <string name="pref_download_basic_summary" comment="">Download only basic information about cache</string>
    <string name="pref_download_on_show" comment="">Download rest info on show</string>
    <string name="pref_download_on_show_summary" comment="">Download rest information about cache when the cache content is shown in Locus Map</string>
    <string name="menu_live_map" comment="">Live map</string>
    <string name="menu_nearest" comment="">Nearest</string>
    <string name="menu_users_guide" comment="">User\'s guide</string>
    <string name="menu_settings" comment="">Settings</string>
    <string name="pref_container_size" comment="">Container size</string>
    <string name="menu_import_from_gc" comment="">Import GC</string>
    <string name="pref_disabled_notification" comment="Title for Disabled notification setting in Live map section. This show Live map notification even though the Live map is disabled and Locus Map is running.">Disabled notification</string>
    <string name="pref_disabled_notification_summary" comment="Summary for Disabled notification setting in Live map section. This show Live map notification even though the Live map is disabled and Locus Map is running.">Show notification when Live map is disabled. This works only if the periodic updates are allowed in Locus Map and Locus Map is running.</string>
    <string name="pref_download_logs_update_geocache" comment="Title of checkbox preference in Downloading settings. If is checked, the Update logs action in POI detail screen in Locus Map will also update listing and all other geocache detail together with logs. Unchecked to update only logs.">Download logs update cache</string>
    <string name="pref_download_logs_update_geocache_summary" comment="Summary of checkbox preference in Downloading settings. If is checked, the Update logs action in POI detail screen in Locus Map will also update listing and all other geocache detail together with logs. Unchecked to update only logs.">Action “Download logs” also update geocache data</string>
    <string name="pref_step_geocaching_count" comment="Title of selectbox preference in Downloading settings.">Step size for Count of caches</string>
    <string name="pref_step_geocaching_count_summary" comment="Summary of selectbox preference in Downloading settings.">Change a step size for count of caches choose dialog</string>
    <string name="pref_account" comment="Title of preference category for Account settings.">Account</string>
    <string name="pref_filter" comment="Title of preference category for Filter settings.">Filter</string>
    <string name="pref_live_map" comment="Title of preference category for Live Map settings.">Live map</string>
    <string name="pref_downloading" comment="Title of preference category for Downloading settings.">Downloading</string>
    <string name="pref_advanced" comment="Title of preference category for Advanced settings.">Advanced</string>
    <string name="pref_about" comment="Title of preference category for About settings.">About</string>
    <string name="pref_download_hints" comment="Title of checkbox preference in Live Map settings.">Download hints</string>
    <string name="pref_download_hints_summary" comment="Summary of checkbox preference in Live Map settings.">Slower loading and more demanding on data usage</string>
    <string name="pref_feedback" comment="Title of preference in About settings. This will open E-mail client with pre-filled feedback e-mail.">Send Feedback</string>
    <string name="menu_import_bookmarks" comment="Dashboard button which show window for importing geocaches from bookmarks.">Import bookmarks</string>
    <string name="pref_hide_geocaches_on_disabled" comment="Title of checkbox preference in Live Map settings. Marking this checkbox will cause to hides all Live Map geocaches in Locus Map after Live Map feature is disabled.">Hide geocaches on disabled</string>
    <string name="pref_hide_geocaches_on_disabled_summary" content="Summary of checkbox preference in Live Map settings. Marking this checkbox will cause to hides all Live Map geocaches in Locus Map after Live Map feature is disabled.">Hide Live map geocaches when Live map feature is disabled</string>
    <string name="pref_disable_dnf_nm_na_geocaches" comment="Title of checkbox preference in Downloading settings. Marking this checkbox will cause to mark geocache as not available with more Did Not Fond, Needs Maintenance or Need Archived logs.">Disable DNF, NM and NA caches</string>
    <string name="pref_disable_dnf_nm_na_geocaches_summary" comment="Summary of checkbox preference in Downloading settings. Marking this checkbox will cause to mark geocache as not available with more Did Not Fond, Needs Maintenance or Need Archived logs.">Mark geocache as not available when contains more <i>Did Not Found</i>, <i>Needs Maintenance</i> or <i>Needs Archived</i> logs</string>
    <string name="pref_disable_dnf_nm_na_geocaches_logs_count" comment="Title of slider preference in Downloading settings. There can be selected how many Did Not Fond, Needs Maintenance or Need Archived logs (1 to 5) cause to mark geocache as not available.">How many last logs to check</string>
    <string name="menu_live_map_download_caches" comment="Dashboard button title to import visible Live map geocaches to Locus map.">Import Live map GC</string>
    <string name="title_enter_authorization_code" comment="Title of input to enter authorization code from sign in process. This is shown when auto redirect with authorization code to the app doesn't work.">Authorization code</string>
    <string name="message_enter_authorization_code" comment="Description of input to enter authorization code from sign in process. This is shown when auto redirect with authorization code to the app doesn't work.">Please, paste the authorization code from Geocaching4Locus website and click on Continue to finish Sign in.</string>
    <string name="hint_authorization_code" comment="Input hint to enter authorization code from sign in process. This is shown when auto redirect with authorization code to the app doesn't work.">Authorization code</string>
    <string name="button_continue" comment="Dialog button for Continue action.">Continue</string>
</resources>