<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_filter">
    <Preference
        android:fragment="com.arcao.geocaching4locus.settings.fragment.filter.CacheTypeFilterPreferenceFragment"
        android:key="cache_type_filter"
        android:title="@string/pref_geocache_type" />
    <Preference
        android:fragment="com.arcao.geocaching4locus.settings.fragment.filter.ContainerTypeFilterPreferenceFragment"
        android:key="container_type_filter"
        android:title="@string/pref_container_size" />
    <Preference
        android:fragment="com.arcao.geocaching4locus.settings.fragment.filter.DifficultyFilterPreferenceFragment"
        android:key="difficulty_filter"
        android:title="@string/pref_difficulty" />
    <Preference
        android:fragment="com.arcao.geocaching4locus.settings.fragment.filter.TerrainFilterPreferenceFragment"
        android:key="terrain_filter"
        android:title="@string/pref_terrain" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="filter_show_found"
        android:summary="@string/pref_show_found_summary"
        android:title="@string/pref_show_found" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="filter_show_own"
        android:summary="@string/pref_show_own_summary"
        android:title="@string/pref_show_own" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="filter_show_disabled"
        android:summary="@string/pref_show_disabled_summary"
        android:title="@string/pref_show_disabled" />
    <EditTextPreference
        android:defaultValue="50.0"
        android:dialogLayout="@layout/preference_dialog_edittext_decimal"
        android:dialogMessage="@string/pref_distance_summary_km"
        android:dialogTitle="@string/pref_distance"
        android:key="filter_distance"
        android:summary="@string/pref_distance_summary_km"
        android:title="@string/pref_distance" />
</PreferenceScreen>