<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_downloading">
    <CheckBoxPreference
        android:defaultValue="true "
        android:key="simple_cache_data"
        android:summary="@string/pref_download_basic_summary"
        android:title="@string/pref_download_basic" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_download_on_show_entries"
        android:entryValues="@array/pref_download_on_show_values"
        android:key="full_cache_data_on_show"
        android:summary="@string/pref_download_on_show_summary"
        android:title="@string/pref_download_on_show" />
    <com.arcao.geocaching4locus.settings.widget.SliderPreference
        android:defaultValue="5"
        android:dialogMessage="@string/pref_logs_count_summary"
        android:key="downloading_count_of_logs"
        android:max="30"
        android:summary="@string/pref_logs_count_summary"
        android:title="@string/pref_logs_count" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="download_logs_update_cache"
        android:summary="@string/pref_download_logs_update_geocache_summary"
        android:title="@string/pref_download_logs_update_geocache" />
    <com.arcao.geocaching4locus.settings.widget.ListPreference
        android:defaultValue="10"
        android:entries="@array/count_of_caches_steps"
        android:entryValues="@array/count_of_caches_steps"
        android:key="downloading_count_of_caches_step"
        android:summary="@string/pref_step_geocaching_count_summary"
        android:title="@string/pref_step_geocaching_count" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="disable_dnf_nm_na_caches"
        android:summary="@string/pref_disable_dnf_nm_na_geocaches_summary"
        android:title="@string/pref_disable_dnf_nm_na_geocaches" />
    <com.arcao.geocaching4locus.settings.widget.SliderPreference
        android:defaultValue="1"
        android:dependency="disable_dnf_nm_na_caches"
        android:key="disable_dnf_nm_na_caches_logs_count"
        android:max="5"
        android:title="@string/pref_disable_dnf_nm_na_geocaches_logs_count"
        app:min="1" />
</PreferenceScreen>