<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/pref_live_map">
    <CheckBoxPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="show_live_map_disabled_notification"
        app:summary="@string/pref_disabled_notification_summary"
        app:title="@string/pref_disabled_notification" />
    <CheckBoxPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="live_map_download_hints"
        app:summary="@string/pref_download_hints_summary"
        app:title="@string/pref_download_hints" />
    <CheckBoxPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="live_map_hide_caches_on_disabled"
        app:summary="@string/pref_hide_geocaches_on_disabled_summary"
        app:title="@string/pref_hide_geocaches_on_disabled" />
</androidx.preference.PreferenceScreen>
